# minecraft-purple-agent

./: .env.example  .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: test-and-publish.yml
src/: agent.py  executor.py  models.py  prompts.py  scripts.py  server.py
